# dependency-injection-example

./: README.md  example_component.py  hello_world_pipeline.json  pipeline.py  pyproject.toml  utils_create_component_with_files.py
example_of_a_python_package_outside_of_this_repo/: model_wrapper_interface.py  trigger_pipeline.py
example_of_a_python_package_outside_of_this_repo/components/: generic_scoring_component.py  generic_training_component.py
example_of_a_python_package_outside_of_this_repo/pipelines/: example_pipeline_with_artifact.py
mlops_package_example/components/: example_component.py  example_component_with_artifact.py  register_asset.py  register_asset_op.py
mlops_package_example/pipelines/: example_pipeline.py  example_pipeline_with_artifact.py
my_model/: config.yaml  dummy_model.py  model.py  model_config.yaml  model_wrapper.py  pipeline.py  trigger_pipeline.py
my_model/sql/: training_split.sql
old/: example_pipeline.py
