[tool.poetry]
name = "example-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-pipeline-components = "^1.0.25"
pytz = "^2022.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
